- Lots of performance refactoring   - agilephp.xml is now optional   - annotation parsing is now optional (<annotations/> in agilephp.xml to enable - default is disabled)   - AgilePHP and MVC classes are completely static   - More tweaking to interceptors   - Updated unit tests, studio package and apidoc comments - Bug fix to AnnotatedMethod. Added magic __wakeup method to construct   the parent class to prevent "reflection object not found" error   when the class is unserialized.
benchmarking broke into 3500 requests per second (non fcgi) for
a total of ~2500% performance increase with caching enabled. The
core framework without caching is seeing ~900% performance increase.

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@143 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/studio/templates/views/error.phtml
+++ b/studio/templates/views/error.phtml
@@ -4,12 +4,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
-		<div class="error"><?php if( isset( $error ) ) echo $error; ?></div>
+		<div class="error"><?php if(isset($error)) echo $error; ?></div>
 		<?php require_once 'footer.html'; ?>
 	</body>
 </html>
