--- a/studio/view/index.phtml
+++ b/studio/view/index.phtml
@@ -4,23 +4,23 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?= $title ?></title>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/tree-icons.css" type="text/css" rel="stylesheet"/>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/components/ext/resources/css/ext-all.css" type="text/css" rel="stylesheet"/>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/components/ext/ux/form/fileuploadfield.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/tree-icons.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/components/ext/resources/css/ext-all.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/components/ext/ux/form/fileuploadfield.css" type="text/css" rel="stylesheet"/>
 		<![if IE]>
-    		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/ie.css" rel="stylesheet" type="text/css" />
+    		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/ie.css" rel="stylesheet" type="text/css" />
 	    <![endif]>
 		<![if !IE]>
-    		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/ff.css" rel="stylesheet" type="text/css" />
+    		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/ff.css" rel="stylesheet" type="text/css" />
 	    <![endif]>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getRequestBase() ?>/RemotingController/getBaseJS/<?= AgilePHP::getFramework()->isInDebugMode() ?>"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getRequestBase() ?>/RemotingController/index/ConfigsRemote"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/components/ext/adapter/ext/ext-base.js"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/components/ext/ext-all.js"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/js/Ext.Fx.shake.js"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/js/AgilePHP.Studio.js"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/js/AgilePHP.Studio.LoginWindow.js"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getRequestBase() ?>/RemotingController/getBaseJS/<?= AgilePHP::isInDebugMode() ?>"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getRequestBase() ?>/RemotingController/index/ConfigsRemote"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/components/ext/adapter/ext/ext-base.js"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/components/ext/ext-all.js"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/view/js/Ext.Fx.shake.js"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/view/js/AgilePHP.Studio.js"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/view/js/AgilePHP.Studio.LoginWindow.js"></script>
 		<script type="text/javascript">
 			Ext.onReady( function() {
 
