--- a/test/view/admin_navigation.phtml
+++ b/test/view/admin_navigation.phtml
@@ -1,28 +1,28 @@
 <table border="0" style="padding-bottom: 5px;">
 	<tr>
 		<td>
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/IndexController/admin">Home</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/IndexController/admin">Home</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getDocumentRoot(); ?>/../studio" target="_blank">Studio</a>
+			<a href="<?= AgilePHP::getDocumentRoot(); ?>/../studio" target="_blank">Studio</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/UserController">Users</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/UserController">Users</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/RoleController">Roles</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/RoleController">Roles</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/SessionController">Sessions</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/SessionController">Sessions</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/InventoryController">Inventory</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/InventoryController">Inventory</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/MailingController">Mailing</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/MailingController">Mailing</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase() ?>/LoginController/logout">Logout</a>
+			<a href="<?= AgilePHP::getRequestBase() ?>/LoginController/logout">Logout</a>
 		</td>
 	</tr>
 </table>
