--- a/test/view/request-param-example.phtml
+++ b/test/view/request-param-example.phtml
@@ -15,7 +15,7 @@
 
 		<div id="container">
 
-			<form name="frmRequestParmTest" action="<?= AgilePHP::getFramework()->getRequestBase() ?>/RequestParamController/process" method="post">
+			<form name="frmRequestParmTest" action="<?= AgilePHP::getRequestBase() ?>/RequestParamController/process" method="post">
 				
 				<div class="label">Name</div>
 				<div class="inputField"><input type="text" name="name" style="margin-left: 75px;"/></div>
