--- a/studio/templates/views/admin.phtml
+++ b/studio/templates/views/admin.phtml
@@ -4,14 +4,14 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<script src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/AgilePHP/AgilePHP.js"></script>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<script src="<?= AgilePHP::getDocumentRoot() ?>/AgilePHP/AgilePHP.js"></script>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 		<?php require_once 'admin_navigation.phtml'; ?>
-		<?php echo isset( $content ) ? $content : 'Welcome to the admin area!'; ?>
+		<?php echo isset($content) ? $content : 'Welcome to the admin area!'; ?>
 		<?php require_once 'footer.html'; ?>
 	</body>
 </html>
