--- a/studio/templates/views/forgot_password.phtml
+++ b/studio/templates/views/forgot_password.phtml
@@ -4,13 +4,13 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>'/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>'/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 
-		<form method="post" action="<?= AgilePHP::getFramework()->getRequestBase() ?>/LoginController/forgotPassword">
+		<form method="post" action="<?= AgilePHP::getRequestBase() ?>/LoginController/forgotPassword">
 
 			<table border="0">
 				<tr>
