--- a/studio/templates/views/login.phtml
+++ b/studio/templates/views/login.phtml
@@ -4,14 +4,14 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?php echo $title; ?></title>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 
 		<div class="info"><?php if( isset( $info ) ) echo $info; ?></div>
-		<form method="post" action="<?= AgilePHP::getFramework()->getRequestBase() ?>/LoginController/login">
+		<form method="post" action="<?= AgilePHP::getRequestBase() ?>/LoginController/login">
 
 			<table border="0">
 				<tr>
@@ -19,7 +19,7 @@
 				</tr>
 				<tr>
 					<td colspan="2">
-						<div style="text-align: center;"><?php if( isset( $error ) ) echo '<span class="error">' . $error . '</span>'; ?></div>
+						<div style="text-align: center;"><?php if(isset($error)) echo '<span class="error">' . $error . '</span>'; ?></div>
 					</td>
 				</tr>			
 				<tr>
@@ -35,12 +35,12 @@
 					<td>
 						<input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="<?= $request_token ?>"/>
 						<input type="submit" value="Login"/>
-						<?php echo '<a href="' . AgilePHP::getFramework()->getRequestBase() . '/LoginController/oops">Forgot Password</a>'; ?>
+						<?php echo '<a href="' . AgilePHP::getRequestBase() . '/LoginController/oops">Forgot Password</a>'; ?>
 					</td>					
 				</tr>
 			</table>
 
-			<div style="padding-top: 25px;" >Not a member? <a href="<?= AgilePHP::getFramework()->getRequestBase() ?>/LoginController/showRegister">Register</a> now!</div>
+			<div style="padding-top: 25px;" >Not a member? <a href="<?= AgilePHP::getRequestBase() ?>/LoginController/showRegister">Register</a> now!</div>
 		</form>
 
 		<?php require_once 'footer.html'; ?>
