--- a/studio/view/editor-code.phtml
+++ b/studio/view/editor-code.phtml
@@ -3,9 +3,9 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getRequestBase() ?>/IndexController/getBaseJS/<?= AgilePHP::getFramework()->isInDebugMode() ?>"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/components/codemirror/js/codemirror.js"></script>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<script type="text/javascript" src="<?= AgilePHP::getRequestBase() ?>/IndexController/getBaseJS/<?= AgilePHP::isInDebugMode() ?>"></script>
+		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/components/codemirror/js/codemirror.js"></script>
 	    <title>AgilePHP IDE :: Code Editor</title>
 	  </head>
 	  <body style="width: 100%;">
