--- a/test/view/error.phtml
+++ b/test/view/error.phtml
@@ -3,12 +3,12 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title><?php echo $title; ?></title>
-		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<title><?= $title; ?></title>
+		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
-		<?= isset( $error ) ? '<div class="error" style="font-size: 13px;">Error: ' . $error . '</div>' : ''; ?>
+		<?= isset($error) ? '<div class="error" style="font-size: 13px;">Error: ' . $error . '</div>' : ''; ?>
 	</body>
 </html>
