--- a/test/view/forgotPassword.phtml
+++ b/test/view/forgotPassword.phtml
@@ -4,13 +4,13 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?php echo $title; ?></title>
-		<link href="<?php echo AgilePHP::getFramework()->getDocumentRoot(); ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<link href="<?php echo AgilePHP::getDocumentRoot(); ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 
-		<form method="post" action="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/LoginController/forgotPassword">
+		<form method="post" action="<?php echo AgilePHP::getRequestBase(); ?>/LoginController/forgotPassword">
 
 			<table border="0">
 				<tr>
@@ -20,8 +20,8 @@
 					<td colspan="2">
 						<div style="text-align: center;">
 							<?php
-								  if( isset( $info ) ) echo '<span class="info">' . $info . '</span>';
-								  if( isset( $error ) ) echo '<span class="error">' . $error . '</span>';
+								  if(isset($info)) echo '<span class="info">' . $info . '</span>';
+								  if(isset($error)) echo '<span class="error">' . $error . '</span>';
 							 ?>
 						</div>
 					</td>
