--- a/test/view/register.phtml
+++ b/test/view/register.phtml
@@ -10,7 +10,7 @@
 	<body>
 		<?php require_once 'header.html'; ?>
 
-		<form id="frmRegister" method="post" action="<?= AgilePHP::getFramework()->getRequestBase() ?>/LoginController/register">
+		<form id="frmRegister" method="post" action="<?= AgilePHP::getRequestBase() ?>/LoginController/register">
 
 			<table border="0">
 				<tr>
@@ -20,8 +20,8 @@
 					<td colspan="2">
 						<div style="text-align: center;">
 							<?php
-								  if( isset( $info ) ) echo '<span class="info">' . $info . '</span>';
-								  if( isset( $error ) ) echo '<span class="error">' . $error . '</span>';
+								  if(isset($info)) echo '<span class="info">' . $info . '</span>';
+								  if(isset($error)) echo '<span class="error">' . $error . '</span>';
 							 ?>
 						</div>
 					</td>
