- More fine tuning of MVC::dispatch and MVC::loadController - Refactored MVC::dispatch caching logic from "die" to "echo and return". - Refactored AgilePHP::parseXml spl_autoload_register logic   to prepend to autoload stack rather than append. - Refactored BaseModelActionController::$xsltRenderer from private to protected - Cleaned up XSLTRenderer doc comments. Added optional $declaration parameter to   XSLTRenderer::render and XSLTRenderer::transform. Defaults to false (dont include). - Bug fix to rarely tested Form::getHTML. Brought into alignment with Form::getXSL. - Cleaned up test/view/form-example.phtml - Removed extraneous meta equiv tag from test/remoting-example.html - Bug fix to BaseModelXslController::getModelListXSL which resulted in malformed   XSL document when both "display" and "description" atrribute values were missing from   orm.xml table element. - Bug fix to BaseModelXslController::getModelAsReadOnlyXSL when rendering foreign keys.   (there is still a bug here when updating - will fix on next checkin)
** agilephp_helloworld benchmark now breaking 5000 requests per second - w00t w00t! **

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@152 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/test/view/form-example.phtml
+++ b/test/view/form-example.phtml
@@ -2,17 +2,16 @@
 "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<script type="text/javascript" src="/AgilePHP/test/index.php/IndexController/getBaseJS"></script>
 		<title>AgilePHP Form Example</title>
 	</head>
 	<body>
 		<?php
-			if( isset( $form ) )
-				echo $form;
+		    // Shows the form
+			if(isset($form)) echo $form;
 
-			if( isset( $parameters ) )
-				print_r( $parameters );
+			// Shows submitted form values
+			if(isset($parameters))
+			   print_r( $parameters );
 		?>
 	</body>
 </html>
