- refactored component autoloader so that InterceptorFilter is executed only if   agilephp.xml contains a valid <annotations/> configuration element. - Added Component::getParams - Performance optimization to PHTMLRenderer::render - Refactored support for front controller style components to AgilePHP.ORM.search in client side javascript - Bug fix to Form::getXSL introduced from recent bit -> boolean checkbox refactoring - Refactored FrameworkException so all constructor arguments are now optional. Defaults to error_get_last() values. - Refactored TestComponent and TestPhar test components. - Created src/mvc/ComponentModelActionController.php which overrides BaseModelActionController to provide   the same functionality for front controller style components. - Component.xml is now being validated against component.dtd - Added TestComponent and TestPhar to test/view/header.html and performed   various tweaks, enhancements and bug fixes to components - Adding new "backward compatible apidoc" flag to changelog which indicates if changes have been made to the   framework which breaks backward compatibility / changes interfaces, object names or methods, etc.
Backward compatible apidoc: No

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@153 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/test/components/TestComponent/view/index.phtml
+++ b/test/components/TestComponent/view/index.phtml
@@ -9,7 +9,7 @@
 
 	<body>
 		<div style="padding-top: 50px; padding-bottom: 50px; padding-left: 25px; text-align: left;">
-			<b><?= $content ?></b>
+			<?= $content ?>
 		</div>		
 	</body>
 </html>
