--- a/test/view/admin_navigation.phtml
+++ b/test/view/admin_navigation.phtml
@@ -1,7 +1,7 @@
 <table border="0" style="padding-bottom: 5px;">
 	<tr>
 		<td>
-			<a href="<?= AgilePHP::getRequestBase(); ?>/IndexController/admin">Home</a>
+			<a href="<?= AgilePHP::getRequestBase(); ?>/IndexController/admin">Admin Area</a> &gt;
 		</td>
 		<td style="padding-left: 10px;">
 			<a href="<?= AgilePHP::getDocumentRoot(); ?>/../studio" target="_blank">Studio</a>
@@ -20,6 +20,12 @@
 		</td>
 		<td style="padding-left: 10px;">
 			<a href="<?= AgilePHP::getRequestBase(); ?>/MailingController">Mailing</a>
+		</td>
+		<td style="padding-left: 10px;">
+			<a href="<?= AgilePHP::getRequestBase(); ?>/TestComponent">Test Component</a>
+		</td>
+		<td style="padding-left: 10px;">
+			<a href="<?= AgilePHP::getRequestBase(); ?>/TestPhar">Test Phar</a>
 		</td>
 		<td style="padding-left: 10px;">
 			<a href="<?= AgilePHP::getRequestBase() ?>/LoginController/logout">Logout</a>
