- Performance tweaks to annotation package - Performance tweaks to orm package - Refactored MVC::dispatch to allow parameterized invocation using specified controller/action values. - Moved DomainModel from mvc package to orm package - Bug fix to User domain model. setLastLogin now ignores null date values. - Added DomainModel type casting to ORM persist, merge, delete, find, get, truncate and call. - Bug fix to InterceptorProxy when parsing class level annotations in namespaced classes. - Bug fix to PGSQLDialect::find when using case sensitive table/column names.
Backward compatible apidoc: No

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@164 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/test/view/admin_navigation.phtml
+++ b/test/view/admin_navigation.phtml
@@ -10,6 +10,9 @@
 			<a href="<?= AgilePHP::getRequestBase(); ?>/UserController">Users</a>
 		</td>
 		<td style="padding-left: 10px;">
+			<a href="<?= AgilePHP::getRequestBase(); ?>/UserRoleController">Users/Role Relationships</a>
+		</td>
+		<td style="padding-left: 10px;">
 			<a href="<?= AgilePHP::getRequestBase(); ?>/RoleController">Roles</a>
 		</td>
 		<td style="padding-left: 10px;">
