- ran unit tests against yesterdays checkin - passing - renamed #@RequestParam to #@FormParam - cleaned up README and TODO files - refactored test/remoting-example.html to use newly supported callback / exception handler syntax - Stripped EmailValidator logic to just check for valid syntax (removed MX and A record check) - Created EmailWithDnsCheckValidator that includes syntax checking as well as DNS MX and A record lookups   to see if the email domain has valid MX and A records.
Backward compatible apidoc: No

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@185 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/test/view/form-param-example.phtml
+++ b/test/view/form-param-example.phtml
@@ -8,6 +8,7 @@
 		<style type="text/css">
 		.label { float: left; }
 		.inputField { margin-left: 100px; }
+		.required { color: #FF0000; }
 		</style>
 	</head>
 
@@ -15,10 +16,13 @@
 
 		<div id="container">
 
-			<form name="frmRequestParmTest" action="<?= AgilePHP::getRequestBase() ?>/RequestParamController/process" method="post">
+			<form name="frmRequestParmTest" action="<?= AgilePHP::getRequestBase() ?>/FormParamController/process" method="post">
 				
-				<div class="label">Name</div>
+				<div class="label">First Name</div>
 				<div class="inputField"><input type="text" name="name" style="margin-left: 75px;"/></div>
+
+				<div class="label required">Email *</div>
+				<div class="inputField"><input type="text" name="email" style="margin-left: 75px;"/></div>
 
 				<div class="label">Comments</div>
 				<div class="inputField"><textarea rows="10" cols="23" name="comments" style="margin-left: 75px;"></textarea></div>
