- Fixed remoting bugs in Studio as a result of changes from last framework checkin - Fixed bug in AgilePHP.js remoting exception handling - Fixed unicode line break escaping / encoding bug in Remoting::decode - Switched escape call to encodeURIComponent in AgilePHP.js - Replaced lots of occurences of <?= $var; ?> style page variables with <?php echo $var; ?> to   increase out-of-the-box compatibility with default PHP installations.
Backward compatible apidoc: Yes

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@189 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/studio/view/editor-code.phtml
+++ b/studio/view/editor-code.phtml
@@ -3,18 +3,18 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
-		<script type="text/javascript" src="<?= AgilePHP::getRequestBase() ?>/IndexController/getBaseJS/<?= AgilePHP::isInDebugMode() ?>"></script>
-		<script type="text/javascript" src="<?= AgilePHP::getDocumentRoot() ?>/components/codemirror/js/codemirror.js"></script>
+		<link href="<?php echo AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<script type="text/javascript" src="<?php echo AgilePHP::getRequestBase() ?>/IndexController/getBaseJS/<?php echo AgilePHP::isInDebugMode() ?>"></script>
+		<script type="text/javascript" src="<?php echo AgilePHP::getDocumentRoot() ?>/components/codemirror/js/codemirror.js"></script>
 	    <title>AgilePHP IDE :: Code Editor</title>
 	  </head>
 	  <body style="width: 100%;">
 		<div style="height: 100%;">
-			<textarea id="code" style="height: 100%;"><?= $code ?></textarea>
+			<textarea id="code" style="height: 100%;"><?php echo $code ?></textarea>
 		</div>
 	    <script type="text/javascript">
 	     var editor = CodeMirror.fromTextArea( 'code', {
-		        id: '<?= $id ?>',
+		        id: '<?php echo $id ?>',
 		        parserfile: ["parsexml.js",
 		     		         "parsecss.js",
 		     		         "tokenizejavascript.js",
