--- a/test/view/admin_navigation.phtml
+++ b/test/view/admin_navigation.phtml
@@ -1,42 +1,42 @@
 <table border="0" style="padding: 5px 5px 5px 5px;">
 	<tr>
 		<td>
-			<a href="<?= AgilePHP::getRequestBase(); ?>/IndexController/admin">Administration</a> &gt;
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/IndexController/admin">Administration</a> &gt;
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getDocumentRoot(); ?>/../studio" target="_blank">Studio</a>
+			<a href="<?php echo AgilePHP::getDocumentRoot(); ?>/../studio" target="_blank">Studio</a>
 		</td>
 
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/UserController">Users</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/UserController">Users</a>
 		</td>
 
 		<!-- 
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/UserRoleController">Users/Role Relationships</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/UserRoleController">Users/Role Relationships</a>
 		</td>
 		-->
 
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/RoleController">Roles</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/RoleController">Roles</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/SessionController">Sessions</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/SessionController">Sessions</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/InventoryController">Inventory</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/InventoryController">Inventory</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/MailingController">Mailing</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/MailingController">Mailing</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/TestComponent">Test Component</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/TestComponent">Test Component</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase(); ?>/TestPhar">Test Phar</a>
+			<a href="<?php echo AgilePHP::getRequestBase(); ?>/TestPhar">Test Phar</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getRequestBase() ?>/LoginController/logout">Logout</a>
+			<a href="<?php echo AgilePHP::getRequestBase() ?>/LoginController/logout">Logout</a>
 		</td>
 	</tr>
 </table>
@@ -46,16 +46,16 @@
 	<tr>
 	    <td>Services &gt;</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getDocumentRoot(); ?>/index.php/users" target="_blank">Users REST API</a>
+			<a href="<?php echo AgilePHP::getDocumentRoot(); ?>/index.php/users" target="_blank">Users REST API</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getDocumentRoot(); ?>/index.php/SoapRpcEncodedTestAPI/wsdl" target="_blank">SOAP RPC/Encoded</a>
+			<a href="<?php echo AgilePHP::getDocumentRoot(); ?>/index.php/SoapRpcEncodedTestAPI/wsdl" target="_blank">SOAP RPC/Encoded</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getDocumentRoot(); ?>/index.php/SoapRpcLiteralTestAPI/wsdl" target="_blank">SOAP RPC/Literal</a>
+			<a href="<?php echo AgilePHP::getDocumentRoot(); ?>/index.php/SoapRpcLiteralTestAPI/wsdl" target="_blank">SOAP RPC/Literal</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?= AgilePHP::getDocumentRoot(); ?>/index.php/SoapDocumentLiteralTestAPI/wsdl" target="_blank">SOAP Document/Literal (wrapped)</a>
+			<a href="<?php echo AgilePHP::getDocumentRoot(); ?>/index.php/SoapDocumentLiteralTestAPI/wsdl" target="_blank">SOAP Document/Literal (wrapped)</a>
 		</td>
 	</tr>
 </table>
