--- a/test/view/form-param-example.phtml
+++ b/test/view/form-param-example.phtml
@@ -16,7 +16,7 @@
 
 		<div id="container">
 
-			<form name="frmRequestParmTest" action="<?= AgilePHP::getRequestBase() ?>/FormParamController/process" method="post">
+			<form name="frmRequestParmTest" action="<?php echo AgilePHP::getRequestBase() ?>/FormParamController/process" method="post">
 				
 				<div class="label">First Name</div>
 				<div class="inputField"><input type="text" name="name" style="margin-left: 75px;"/></div>
