--- a/test/view/index.phtml
+++ b/test/view/index.phtml
@@ -3,18 +3,18 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title><?= $title ?></title>
-		<link href="<?= AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
+		<title><?php echo $title ?></title>
+		<link href="<?php echo AgilePHP::getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 
 		<div style="padding-bottom: 20px;">
-			<a href="<?= AgilePHP::getRequestBase() ?>/LoginController">Login</a>
+			<a href="<?php echo AgilePHP::getRequestBase() ?>/LoginController">Login</a>
 		</div>
 
-		<?= $content ?>
+		<?php echo $content ?>
 
 		<?php require_once 'footer.html'; ?>
 	</body>
