--- a/test/view/register.phtml
+++ b/test/view/register.phtml
@@ -3,14 +3,14 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title><?= $title; ?></title>
+		<title><?php echo $title; ?></title>
 		<link href="/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 
-		<form id="frmRegister" method="post" action="<?= AgilePHP::getRequestBase() ?>/LoginController/register">
+		<form id="frmRegister" method="post" action="<?php echo AgilePHP::getRequestBase() ?>/LoginController/register">
 
 			<table border="0">
 				<tr>
@@ -43,7 +43,7 @@
 					<td><input type="password" name="password2"/></td>
 				</tr>
 				<tr>
-					<td><input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="<?= $request_token ?>"/></td>					
+					<td><input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="<?php echo $request_token ?>"/></td>					
 					<td><input type="submit" value="Send"/></td>					
 				</tr>
 			</table> 
